--- a/ch05-pandas/05_02_dataframes.ipynb
+++ b/ch05-pandas/05_02_dataframes.ipynb
@@ -29,7 +29,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!cat nobels.csv" // for windows its !type
+    "!cat nobels.csv" 
    ]
   },
   {
